Estilizando os últimos cards

--- a/index.html
+++ b/index.html
@@ -191,13 +191,12 @@
     </div>
   </section>
 
-  <div>
+  <aside>
     <div id="ads">
       <img src="assets/Ads.png" alt="">
-    </div>
-  </div>
+    </div>  
 
-  <section id="more">
+    <section id="more">
     <header class="grid grid-flow-col">
       <h3>Viu isso aqui?</h3>
       <a href="#" class="grid grid-flow-col">
@@ -213,7 +212,7 @@
         <div>
           <span class="content-tag">Software</span>
           <h3>
-            Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...
+            Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológic...
           </h3>          
         </div>
         
@@ -272,7 +271,8 @@
       </article>
     </div>
 
-  </section>
+    </section>
+  </aside>
 
  </main>
 
